eliminate errors